--- a/KTMM-Task1/config.json
+++ b/KTMM-Task1/config.json
@@ -1,17 +1,10 @@
 {
-	"eps1": 0.1,
-	"eps2": 0.1,
-	"eps3": 0.1,
-	"eps4": 0.01,
-	"eps5": 0.05,
-	"c1": 520,
-	"c2": 520,
-	"c3": 520,
-	"c4": 840,
-	"c5": 900,
-	"lambda_12": 520,
-	"lambda_23": 520,
-	"lambda_34": 520,
-	"lambda_12": 520,
-	"lambda_45": 119
+	"eps": [0.1, 0.1, 0.1, 0.01, 0.05],
+	"c": [520, 520, 520, 840, 900],
+	"lambda": [[0, 20, 0,  0,    0  ],
+			   [0, 0,  20, 0,    0  ],
+			   [0, 0,  0,  10.5, 0  ],
+			   [0, 0,  0,  0,    119],
+			   [0, 0,  0,  0,    0  ]],
+	"Q_R": "np.array([0, 5*(20 + 3*math.cos(t/4)), 0, 0, 0])"
 }
