--- a/KTMM-Task1/config.json
+++ b/KTMM-Task1/config.json
@@ -6,5 +6,7 @@
 			   [0, 0,  0,  10.5, 0  ],
 			   [0, 0,  0,  0,    119],
 			   [0, 0,  0,  0,    0  ]],
-	"Q_R": "np.array([0, 5*(20 + 3*math.cos(t/4)), 0, 0, 0])"
+	"Q_R": "np.array([0, 5*(20 + 3*math.cos(t/4)), 0, 0, 0])",
+	"y0": [0, 0, 0, 0, 0],
+	"t": "np.linspace(0, 5, 21)"
 }
